--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,89 @@
 body, html {
     padding: 0 !important; margin: 0 !important;
+    font-family: monospace;
+}
+
+#text {
+    width: 40vw;
+    height: 30vh;
+    background-color: white;
+    padding-left: 20px;
+    padding-top: 20px;
+    line-height: 5vh;
+}
+
+.color {
+    -webkit-transition: background 0.2s linear;
+    -moz-transition: background 0.2s linear;
+    -ms-transition: background 0.2s linear;
+    -o-transition: background 0.2s linear;
+    transition: background 0.2s linear;
+}
+
+#grid {
+    clear: both;
+    float: left;
+    width: 45vw;
+    position: absolute;
+    left: 40vw;
+}
+
+.block {
+    display: block;
+    float: left;
+    background-color: black;
+    width: 15vw;
+    height: 15vw;
+}
+
+a {
+    color: black;
+}
+
+#one-one {
+    background-color: pink;
+}
+#two-one {
+    background-color: LightCoral;
+}
+#three-one {
+    background-color: LightSalmon;
+}
+
+#one-two {
+    background-color: lightYellow;
+}
+#two-two {
+    background-color: palegreen;
+}
+#three-two {
+    background-color: lightskyblue;
+}
+
+#pink:hover {
+    background-color: pink;
+}
+
+#red:hover {
+    background-color: LightCoral;
+}
+
+#orange:hover {
+    background-color: LightSalmon;
+}
+
+#yellow:hover {
+    background-color: lightyellow;
+}
+
+#green:hover {
+    background-color: palegreen;
+}
+
+#blue:hover {
+    background-color: LightSkyBlue;
+}
+
+#purple:hover {
+    background-color: lavender;
 }
